# llama-cpp-4

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE-MIT  LINUX.md  MAC.md  README.md  WINDOWS.md  test-build.Dockerfile
.github/workflows/: llama-cpp-rs-check.yml  prebuilt-llama.yml  update-llama-cpp.yml  update-toml-version.yaml
examples/: common.rs  model_info.rs  usage.rs
examples/batched-bench/: Cargo.toml
examples/batched-bench/src/: main.rs
examples/chat/: Cargo.toml
examples/chat/src/: main.rs
examples/cvector-generator/: Cargo.toml
examples/cvector-generator/src/: main.rs
examples/embeddings/: Cargo.toml
examples/embeddings/src/: main.rs
examples/export-lora/: Cargo.toml
examples/export-lora/src/: main.rs
examples/fit-params/: Cargo.toml
examples/fit-params/src/: main.rs
examples/imatrix/: Cargo.toml
examples/imatrix/src/: main.rs
examples/incremental-chat/: Cargo.toml
examples/incremental-chat/src/: bench.rs  charts.rs  line_editor.rs  main.rs  prefill.rs
examples/mtmd/: Cargo.toml
examples/mtmd/src/: main.rs
examples/perplexity/: Cargo.toml
examples/perplexity/src/: main.rs
examples/quantize/: Cargo.toml
examples/quantize/src/: main.rs
examples/rpc/: Cargo.toml
examples/rpc/src/: main.rs
examples/server/: Cargo.toml  README.md
examples/server/src/: main.rs  tools.rs
examples/server/test/: auth.sh  chat.sh  completions.sh  embeddings.sh  health.sh  tools.sh
examples/server/tests/: integration.rs
examples/simple/: Cargo.toml
examples/simple/src/: main.rs
examples/split_model/: Cargo.toml
examples/split_model/src/: main.rs
examples/structured/: Cargo.toml
examples/structured/src/: main.rs
examples/tokenize/: Cargo.toml
examples/tokenize/src/: main.rs
examples/tts/: Cargo.toml
examples/tts/src/: main.rs
examples/turbo-quant/: Cargo.toml
examples/turbo-quant/src/: main.rs
llama-cpp-4/: Cargo.toml  README.md
llama-cpp-4/src/: common.rs  context.rs  ggml.rs  lib.rs  llama_backend.rs  llama_batch.rs  model.rs  mtmd.rs  quantize.rs  sampling.rs  token.rs  token_type.rs
llama-cpp-4/src/context/: kv_cache.rs  params.rs  perf.rs  session.rs  tensor_capture.rs
llama-cpp-4/src/grammar/: tests.rs
llama-cpp-4/src/model/: params.rs
llama-cpp-4/src/model/params/: kv_overrides.rs
llama-cpp-4/src/rpc/: backend.rs  error.rs  mod.rs  server.rs
llama-cpp-4/src/token/: data.rs  data_array.rs
llama-cpp-4/tests/: test_ggml.rs  test_lib.rs  test_model.rs  test_q1.rs  test_sampler.rs
llama-cpp-sys-4/: Cargo.toml  README.md  build.rs  wrapper.h
llama-cpp-sys-4/src/: common.rs  lib.rs
scripts/: testbench.sh
