[workspace]
resolver = "2"
members = [
    "llama-cpp-sys-4",
    "llama-cpp-4",
    "examples/embeddings",
    "examples/simple",
    "examples/chat",
    "examples/split_model",
    "examples/server",
    "examples/mtmd",
    "examples/structured",
    "examples/tokenize",
    "examples/batched-bench",
    "examples/perplexity",
    "examples/quantize",
    "examples/fit-params",
    "examples/export-lora",
    "examples/imatrix",
    "examples/cvector-generator",
    "examples/tts",
    "examples/turbo-quant",
    "examples/incremental-chat",
]

[workspace.dependencies]
# core library deps
thiserror = "2.0.18"
tracing = "0.1"

# examples and benchmarks
hf-hub = { version = "0.5.0" }
criterion = "0.8.2"
pprof = "0.15.0"
bindgen = "0.72.1"
cc = "1.2.60"
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
encoding_rs = "0.8.35"

[workspace.lints.rust]
missing_docs = { level = "warn" }
missing_debug_implementations = { level = "warn" }

[workspace.lints.clippy]
pedantic = { level = "warn" }
