[package]
name = "llama-cpp-4"
description = "llama.cpp bindings for Rust"
version = "0.2.46"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Eugene Hauptmann"]
repository = "https://github.com/eugenehp/llama-cpp-rs"
keywords = ["llama", "llm", "ggml", "gguf", "inference"]
categories = ["api-bindings", "science"]

[dependencies]
enumflags2 = "0.7.12"
llama-cpp-sys-4 = { path = "../llama-cpp-sys-4", version = "0.2.46" }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
encoding_rs = { workspace = true }

[features]
default = ["openmp", "mtmd", "dynamic-link"]
cuda = ["llama-cpp-sys-4/cuda"]
metal = ["llama-cpp-sys-4/metal"]
dynamic-link = ["llama-cpp-sys-4/dynamic-link"]
vulkan = ["llama-cpp-sys-4/vulkan"]
webgpu = ["llama-cpp-sys-4/webgpu"]
blas = ["llama-cpp-sys-4/blas"]
opencl = ["llama-cpp-sys-4/opencl"]
hip = ["llama-cpp-sys-4/hip"]
native = ["llama-cpp-sys-4/native"]
openmp = ["llama-cpp-sys-4/openmp"]
rpc = ["llama-cpp-sys-4/rpc"]
mtmd = ["llama-cpp-sys-4/mtmd"]
ggml = []
q1 = ["llama-cpp-sys-4/q1"]
prebuilt = ["llama-cpp-sys-4/prebuilt"]



[lints]
workspace = true

[package.metadata.docs.rs]
all-features = false
features = ["mtmd", "ggml"]

[[example]]
name = "usage"
path = "../examples/usage.rs"

[[example]]
name = "model_info"
path = "../examples/model_info.rs"

[[example]]
name = "common"
path = "../examples/common.rs"
