[package]
name = "fit-params"
version = "0.2.22"
edition = "2021"
description = "Example: fit-params for llama-cpp-4"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
llama-cpp-4 = { path = "../../llama-cpp-4", version = "0.2.22" }
llama-cpp-sys-4 = { path = "../../llama-cpp-sys-4", version = "0.2.22" }
clap = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }

[features]
cuda = ["llama-cpp-4/cuda"]
metal = ["llama-cpp-4/metal"]
vulkan = ["llama-cpp-4/vulkan"]

[lints]
workspace = true
