[package]
name = "imatrix"
version = "0.2.22"
edition = "2021"
description = "Example: imatrix for llama-cpp-4"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
llama-cpp-4 = { path = "../../llama-cpp-4", version = "0.2.22" }
clap = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }

[features]
cuda = ["llama-cpp-4/cuda"]
metal = ["llama-cpp-4/metal"]

[lints]
workspace = true
