[package]
name = "openai-server"
version = "0.2.22"
edition = "2021"
description = "Minimal OpenAI-compatible chat completion server"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
llama-cpp-4 = { path = "../../llama-cpp-4", version = "0.2.22" }
actix-web = "4"
actix-multipart = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
encoding_rs = { workspace = true }
hf-hub = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["sync", "rt"] }
futures-util = "0.3"
# Optional dependencies pulled in by the `mtmd` feature.
base64  = { version = "0.22", optional = true }
reqwest = { version = "0.13", features = ["json"], optional = true }

[dev-dependencies]
reqwest = { version = "0.13", features = ["blocking", "json"] }

[features]
cuda   = ["llama-cpp-4/cuda"]
metal  = ["llama-cpp-4/metal"]
vulkan = ["llama-cpp-4/vulkan"]
# Enables multimodal (image / audio) support via the mtmd library.
# Requires a --mmproj <path> argument at runtime.
mtmd   = ["llama-cpp-4/mtmd", "dep:base64", "dep:reqwest"]

[lints]
workspace = true
