[package]
name = "split-model-example"
version = "0.2.22"
edition = "2021"
description = "Example: split-model-example for llama-cpp-4"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
llama-cpp-4 = { path = "../../llama-cpp-4", version = "0.2.22" }
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
hf-hub = { workspace = true }